# ws_chat

./: .env  .gitignore  Cargo.toml  README.md  chat.html
cws/: Cargo.toml
cws/src/: main.rs
src/: main.rs
web/: Cargo.toml  index.html  tailwind.config.js
web/src/: main.rs
