[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
getrandom = { version = "0.2.9", features = ["js"] }
leptos = { version = "0.3.0", features = ["csr"]}
leptos_meta = { version = "0.3.0", features = ["csr"]}
leptos_router = { version = "0.3.0", features = ["csr"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tungstenite = "0.19.0"
